--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -49,7 +49,8 @@
     "    * [Installation and Prerequisites](CH1_02-Prerequisites.ipynb)\n",
     "    * [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)\n",
     "    * [Open a (DM) file ](CH1_04-Open_File.ipynb)\n",
-    "    * *Course Material*\n",
+    "    \n",
+    "  *Course Material*\n",
     "    * [Course Organization](CH1_05-Course_Organization.ipynb)\n",
     "    * [Overview](CH1_06-Overview.ipynb)\n",
     "    * [Electron-Optics](CH1_07-Electron-Optics.ipynb)\n",
@@ -62,7 +63,8 @@
    "metadata": {},
    "source": [
     "## Navigation:\n",
-    "- **[Front](../_MSE672_Intro_TEM.ipynb)**\n"
+    "\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
    ]
   },
   {
