--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -214,7 +214,7 @@
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2021.12.1':\n",
+    "if test_package('pyTEMlib') < '0.2022.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -301,9 +301,10 @@
    },
    "source": [
     "## Navigation\n",
-    "- **Next: [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)**\n",
-    "- **UP: [Chapter 1](CH1-00-Introduction.ipynb)**\n",
-    "- **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)**"
+    "- <font size = \"3\">  **Back  [Python as it is used here](CH1_01-Introduction_Python.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Chapter 1: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
   },
   {
@@ -319,13 +320,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known nbextensions:\n",
+      "  config dir: C:\\Users\\gdusc\\anaconda3\\etc\\jupyter\\nbconfig\n",
+      "    notebook section\n",
+      "      jupyter-jsmol/extension enabled \n",
+      "      jupyterlab-plotly/extension enabled \n",
+      "      jupyter-js-widgets/extension enabled \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "      - Validating: ok\n",
+      "      - Validating: ok\n",
+      "      - Validating: ok\n"
+     ]
+    }
+   ],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "import sys\n",
@@ -341,13 +364,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... failed with initial frozen solve. Retrying with flexible solve.\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... failed with initial frozen solve. Retrying with flexible solve.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PackagesNotFoundError: The following packages are not available from current channels:\n",
+      "\n",
+      "  - jupyter_contrib_nbextensions\n",
+      "\n",
+      "Current channels:\n",
+      "\n",
+      "  - https://repo.anaconda.com/pkgs/main/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/main/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/r/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/r/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/msys2/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/msys2/noarch\n",
+      "\n",
+      "To search for alternate channels that may provide the conda package you're\n",
+      "looking for, navigate to\n",
+      "\n",
+      "    https://anaconda.org\n",
+      "\n",
+      "and use the search bar at the top of the page.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -362,14 +424,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": true
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Enabling notebook extension toc2...\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X toc2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "!{sys.executable} -m  jupyter nbextension enable toc2"
@@ -377,18 +449,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$('<div id=\"toc\"></div>').css({position: 'fixed', top: '120px', left: 0}).appendTo(document.body);\n",
+       "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js');\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "$('<div id=\"toc\"></div>').css({position: 'fixed', top: '120px', left: 0}).appendTo(document.body);\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
