--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -16,20 +16,16 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_05-Course_Organization.ipynb)\n",
     " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_05-Course_Organization.ipynb)\n",
-    "\n",
     "\n",
     "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by\n",
+    "by Gerd Duscher, Fall 2022\n",
     "\n",
-    "Gerd Duscher\n",
-    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
     "The University of Tennessee, Knoxville"
    ]
   },
@@ -47,14 +43,14 @@
     "\n",
     "Plenum Press, 2009 (2nd Edition).\n",
     "\n",
-    "[available  online at the library](https://utk.primo.exlibrisgroup.com/discovery/fulldisplay?docid=cdi_askewsholts_vlebooks_9780387765013&context=PC&vid=01UTN_KNOXVILLE:01UTK&lang=en&search_scope=MyInst_and_CI&adaptor=Primo%20Central&tab=Everything&query=any%2Ccontains%2C%20Transmission%20Electron%20Microscopy&facet=rtype%2Cexclude%2Creviews&facet=rtype%2Cexclude%2Creference_entrys)\n",
+    "[available  online at the library](https://link-springer-com.utk.idm.oclc.org/book/10.1007%2F978-0-387-76501-3)\n",
     "\n",
     "### Reimer and Kohl\n",
     "**Transmission Electron Microscopy**\n",
     "\n",
     "Springer, Berlin, 2007 (5th Edition).<br>\n",
     "\n",
-    "[available  online at the library](https://utk.primo.exlibrisgroup.com/discovery/fulldisplay?docid=cdi_proquest_ebookcentral_EBC6362086&context=PC&vid=01UTN_KNOXVILLE:01UTK&lang=en&search_scope=MyInst_and_CI&adaptor=Primo%20Central&tab=Everything&query=any%2Ccontains%2CReimer%20and%20Kohl&offset=0)\n",
+    "[available  online at the library](https://link-springer-com.utk.idm.oclc.org/book/10.1007%2F978-0-387-40093-8)\n",
     "\n",
     "### Zuo and Spence\n",
     "\n",
@@ -62,14 +58,14 @@
     "\n",
     "Springer, NewYork, 2017 <br>\n",
     "\n",
-    "available online at the Library\n",
+    "[available online at the library](https://link-springer-com.utk.idm.oclc.org/book/10.1007%2F978-1-4899-2353-0)\n",
     "\n",
     "### Kirkland\n",
     "**Advanced Computing in Electron Microscopy**\n",
     "\n",
     "Springer, NewYork, 2010 (2nd Edition)<br>\n",
     "\n",
-    "available online at the Library\n",
+    "[available online at the library](https://link-springer-com.utk.idm.oclc.org/book/10.1007%2F978-1-4419-6533-2)\n",
     "\n",
     "### R.F. Egerton\n",
     "\n",
@@ -77,7 +73,7 @@
     "\n",
     "Plenum Press, 2011 (3rd Edition)<br>\n",
     "\n",
-    "available online at the Library\n"
+    "[available online at the library](https://link-springer-com.utk.idm.oclc.org/book/10.1007%2F978-1-4419-9583-4)\n"
    ]
   },
   {
@@ -110,7 +106,7 @@
     "\n",
     "| Week | Lecture | Chp. | Lab |\n",
     "|------|---------|------|-----|\n",
-    "|01/17 - 01/23| 1:Introduction | 1 | |\n",
+    "|01/24 - 01/30| 1:Introduction | 1 | |\n",
     "|01/24 - 01/30| 2,3:Geometric Ray Optics | 6 ||\n",
     "|01/31 - 02/06| 4,5:Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
     "|02/07 - 02/13 | 6,7:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
@@ -118,14 +114,14 @@
     "|02/21 - 02/27 | 10,11:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
     "|02/28 - 03/06 | 12:Imaging Overview | 22 ||\n",
     "|03/07 - 03/13 | 13,14:Imaging Conventional | 24-27 | Lab5: Exam|\n",
-    "|03/14 - 03/20 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Two Beams|\n",
-    "|03/21 - 03/27 | 17,18:Imaging and Lens Aberrations | 31 | Lab7: Phase Contrast|\n",
-    "|03/28 - 04/03 | 19,20:Imaging Z-contrast| -  | Lab8: CTF|\n",
-    "|04/04 - 04/10  | 21,22:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
-    "|04/11 - 04/17  | 23,24:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
-    "|04/18 - 04/24  | 25:Other Techniques | 29 ||\n",
-    "|04/25 - 05/01 | 26,27: TEM parts and vacuum | 5-9 ||\n",
-    "|05/02 - 05/08 | 28:Project discussion ||"
+    "|03/21 - 03/27 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Two Beams|\n",
+    "|03/28 - 04/03 | 17,18:Imaging and Lens Aberrations | 31 | Lab7: Phase Contrast|\n",
+    "|04/04 - 04/10  | 19,20:Imaging Z-contrast| -  | Lab8: CTF|\n",
+    "|04/11 - 04/17 | 21,22:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
+    "|04/18 - 04/24  | 23,24:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
+    "|04/25 - 05/01  | 25:Other Techniques | 29 ||\n",
+    "|05/02 - 05/08 | 26,27: TEM parts and vacuum | 5-9 ||\n",
+    "|05/10 | 28:Project discussion ||"
    ]
   },
   {
@@ -142,7 +138,7 @@
     "I will answer email questions in the same time slots.\n",
     "\n",
     "## Class and Lab\n",
-    "-  Parallel to the class there is a Lab course.\n",
+    "-  Parallel to the class there is a Lab (MSE676) course.\n",
     "- We will analyze the data of the lab course, independent of whether you are participating or not,\n",
     "- For the analysis of the data we will need a labtop in class.\n",
     "\n",
@@ -156,7 +152,7 @@
    "source": [
     "## Homework and Quizzes\n",
     "- Homeworks and Quizzes are the main way to determine your grade in this course.\n",
-    "- Homeworks have to be submitted electronically and generally are about analyzing on your own data which are similar to those in the practice sessions .\n",
+    "- Homeworks have to be submitted electronically through Canvas and generally are about analyzing on your own data which are similar to those in the practice sessions.\n",
     "- Think of these homeworks as small take-home exams.\n",
     "- Additionally, there will be reading assignments every week.\n",
     "- Each week before the lecture, there will be a short quiz about the content of the reading assignments.\n",
@@ -195,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "5",
