--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -59,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The angle between vectors a and b is 49.80°\n"
+     ]
+    }
+   ],
    "source": [
     "# We need to import the numpy package\n",
     "import numpy as np\n",
@@ -94,9 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root of dot product of vector with itself\n",
+      "2.449489742783178\n",
+      "\n",
+      " Two other ways to calculate this\n",
+      "2.449489742783178\n",
+      "2.449489742783178\n"
+     ]
+    }
+   ],
    "source": [
     "print('Square root of dot product of vector with itself')\n",
     "print(np.sqrt(np.dot(a_vector,a_vector)))\n",
@@ -120,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The angle between vectors a and b is 49.80°\n"
+     ]
+    }
+   ],
    "source": [
     "# unit vectors\n",
     "a_normed = a_vector/a_length\n",
@@ -148,11 +177,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function angle_between_two_vectors in module __main__:\n",
+      "\n",
+      "angle_between_two_vectors(vector1, vector2)\n",
+      "    Calculation of the angle between two vectors of the same dimension by arccos of the dot product\n",
+      "    \n",
+      "    Input:\n",
+      "    ------\n",
+      "        vector1, vector2: two vectors as lists or numpy arrays\n",
+      "        \n",
+      "    Output:\n",
+      "    -------\n",
+      "        angle: angle between the vectors in radians\n",
+      "\n",
+      "The angle between vectors a: [1, 1, 2] and b: [0, 3, 1] is 49.80°\n"
+     ]
+    }
+   ],
    "source": [
     "def angle_between_two_vectors(vector1, vector2):\n",
     "    \"\"\"\n",
@@ -205,9 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "angles of vector field to first vector\n",
+      "[ 0.    49.797 40.203]\n"
+     ]
+    }
+   ],
    "source": [
     "def angles_to_first_vector(vector_field):\n",
     "    \"\"\"\n",
@@ -273,9 +332,9 @@
    "metadata": {},
    "source": [
     "## Navigation\n",
-    "- **Next: [Prerequisites](CH1_02-Prerequisites.ipynb)**\n",
-    "- **UP: [Chapter 1](CH1_00-Introduction.ipynb)**\n",
-    "- **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)**"
+    "- <font size = \"3\">  **Next: [Prerequisites](CH1_02-Prerequisites.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Chapter 1: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
   },
   {
