--- a/Diffraction/CH2_04-Structure_Factors.ipynb
+++ b/Diffraction/CH2_04-Structure_Factors.ipynb
@@ -4560,7 +4560,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4574,7 +4574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "livereveal": {
    "height": 768,
