--- a/Diffraction/CH2_05-Diffraction_Rings.ipynb
+++ b/Diffraction/CH2_05-Diffraction_Rings.ipynb
@@ -11780,7 +11780,7 @@
     "## Navigation\n",
     "\n",
     "- <font size = \"3\">  **Back Chapter 1: [Basic Crystallography](CH2_03-Basic_Crystallography.ipynb)** </font>\n",
-    "- <font size = \"3\">  **Next: [Analyzing Ring Diffraction Pattern](CH2_05-Diffraction_Rings.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Kinematic Scattering Geometry](CH2_06-Kinematic_Scattering_Geometry.ipynb)** </font>\n",
     "- <font size = \"3\">  **Chapter 2: [Diffraction](CH2_00-_Diffraction.ipynb)** </font>\n",
     "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n",
     "\n"
