--- a/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
@@ -7493,9 +7493,8 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -7509,7 +7508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "livereveal": {
    "height": 768,
