--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +66,10 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "# Colab setup ------------------\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    !pip install pyTEMlib -q\n",
-    "# pyTEMlib setup ------------------\n",
-    "else:\n",
-    "    if test_package('pyTEMlib') < '0.2022.1.0':\n",
-    "        print('installing pyTEMlib')\n",
-    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "# ------------------------------\n",
+    "if test_package('pyTEMlib') < '0.2022.1.1':\n",
+    "    print('installing pyTEMlib')\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "\n",
     "print('done')"
    ]
   },
@@ -87,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +94,7 @@
     }
    ],
    "source": [
-    "%pylab --no-import-all notebook\n",
+    "%pylab notebook\n",
     "\n",
     "import scipy.constants as const  #scientific constants"
    ]
@@ -170,32 +165,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6256118898444742\n",
-      "Classic wave length is 3.88 pm for acceleration voltage 100.0 kV\n",
-      " which is a velocity of 187553726.21 m/s or 62.56% of the speed of light\n"
+      "0.6256118921262814\n",
+      "Classic wave length is 38.78 pm for acceleration voltage 100.0 kV\n",
+      " which is a velocity of 187553726.89 m/s or 62.56% of the speed of light\n"
      ]
     }
    ],
    "source": [
     "## input \n",
-    "acceleration_voltage_V = U = 100.0 *1000.0 #V   \n",
+    "acceleration_voltage_V = U = 100.0 * 1000.0 #V   \n",
     "\n",
     "## energy\n",
-    "E_kin = eV = const.e * acceleration_voltage_V  # potential\n",
+    "E_kin = eU = const.e * acceleration_voltage_V  # potential\n",
     "\n",
     "wave_length_m = const.h/np.sqrt(2*const.m_e*E_kin) # non-relativistic wavelength in m\n",
     "\n",
     "\n",
     "##please note that we will keep all length units in nm if possible.\n",
     "##otherwise we useonly SI units!!!\n",
-    "wave_length_nm = wave_length_m *1e9 # now in nm\n",
+    "wave_length_A = wave_length_m *1e10 # now in Angstrom\n",
     "\n",
     "print(np.sqrt(2/const.m_e*E_kin)/const.c)\n",
     "\n",
@@ -222,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +232,7 @@
     "# Input: Acceleration Voltage\n",
     "E0 = acceleration_voltage = 200.0 *1000.0 #V\n",
     "\n",
-    "E_kin = eV = const.e * acceleration_voltage #potential\n",
+    "E_kin = eU = const.e * acceleration_voltage #potential\n",
     "\n",
     "#relativisitic wavelength\n",
     "wave_length = const.h/np.sqrt(2*const.m_e*E_kin*(1+E_kin/(2*const.m_e*const.c**2))) #in m\n",
@@ -280,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The classic velocity of the electron  is 265241023.28 m/s or 88.47% of the speed of light\n",
-      "The relativistic velocity of the electron  is 208450034.42 m/s or 69.53% of the speed of light\n"
+      "The classic velocity of the electron  is 265241024.25 m/s or 88.47% of the speed of light\n",
+      "The relativistic velocity of the electron  is 208450034.88 m/s or 69.53% of the speed of light\n"
      ]
     }
    ],
@@ -308,15 +303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version  0.6  by G.Duscher\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
@@ -329,8 +322,8 @@
     "wave_length = ks.get_wavelength(acceleration_voltage)\n",
     "print(f'The relativistically corrected wave length is {wave_length*1e2:.2f} pm for acceleration voltage {acceleration_voltage/1000:.1f} kV')\n",
     "\n",
-    "# Wavelength in 1/nm\n",
-    "def get_wavelength(E0):\n",
+    "# Wavelength in Angstrom\n",
+    "def get_wavelength(acceleration_voltage):\n",
     "    \"\"\"\n",
     "    Calculates the relativistic corrected de Broglie wave length of an electron\n",
     "\n",
@@ -339,16 +332,16 @@
     "        acceleration voltage in volt\n",
     "    Output:\n",
     "    -------\n",
-    "        wave length in 1/Angstrom\n",
+    "        wave length in Angstrom\n",
     "    \"\"\"\n",
     "\n",
-    "    eV = const.e * E0 \n",
-    "    return const.h/np.sqrt(2*const.m_e*eV*(1+eV/(2*const.m_e*const.c**2)))*10**10\n"
+    "    eU = const.e * acceleration_voltage \n",
+    "    return const.h/np.sqrt(2*const.m_e*eU*(1+eU/(2*const.m_e*const.c**2)))*10**10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +353,14 @@
       "get_wavelength(e0)\n",
       "    Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
       "    \n",
-      "    Input:\n",
-      "    ------\n",
+      "    Parameter:\n",
+      "    ---------\n",
+      "    e0: float\n",
       "        acceleration voltage in volt\n",
-      "    Output:\n",
+      "    Returns:\n",
       "    -------\n",
-      "        wave length in nm\n",
+      "    wavelength: float\n",
+      "        wave length in Angstrom\n",
       "\n"
      ]
     }
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,8 +384,7 @@
       "    pyTEMlib.kinematic_scattering\n",
       "\n",
       "DESCRIPTION\n",
-      "    KinsCat\n",
-      "    Kinematic Scattering Theory\n",
+      "    kinematic_scattering\n",
       "    Copyright by Gerd Duscher\n",
       "    \n",
       "    The University of Tennessee, Knoxville\n",
@@ -407,12 +401,12 @@
       "           Appendix C\n",
       "    \n",
       "    Units:\n",
-      "        everything is in SI units, except length is given in nm.\n",
+      "        everything is in SI units, except length which is given in Angstrom.\n",
       "    \n",
       "    Usage:\n",
       "        See the notebooks for examples of these routines\n",
       "    \n",
-      "    All the input and output is done through a dictionary\n",
+      "    All the input and output is done through a ase.Atoms object and the dictionary in the info attribute\n",
       "\n",
       "FUNCTIONS\n",
       "    Zuo_fig_3_18(verbose=True)\n",
@@ -438,10 +432,10 @@
       "        same as Zuo_fig_3_18\n",
       "    \n",
       "    feq(element, q)\n",
-      "        Atomic form factor parametrized in 1/Angstrom but converted to 1/nm\n",
+      "        Atomic form factor parametrized in 1/Angstrom but converted to 1/Angstrom\n",
       "        \n",
       "        The atomic form factor is from Kirkland: Advanced Computing in Electron Microscopy 2nd edition, Appendix C.\n",
-      "        From Appendix C of Kirkland, \"Advanced Computing in Electron Microscopy\", 2nd ed.\n",
+      "        From Appendix C of Kirkland, \"Advanced Computing in Electron Microscopy\", 3Ard ed.\n",
       "        Calculation of electron form factor for specific q:\n",
       "        Using equation Kirkland C.15\n",
       "        \n",
@@ -450,7 +444,7 @@
       "        element: string\n",
       "            element name\n",
       "        q: float\n",
-      "            magnitude of scattering vector in 1/nm -- (=> exp(-i*g.r), physics negative convention)\n",
+      "            magnitude of scattering vector in 1/Angstrom -- (=> exp(-i*g.r), physics negative convention)\n",
       "        \n",
       "        Returns\n",
       "        -------\n",
@@ -472,12 +466,14 @@
       "    get_wavelength(e0)\n",
       "        Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
       "        \n",
-      "        Input:\n",
-      "        ------\n",
+      "        Parameter:\n",
+      "        ---------\n",
+      "        e0: float\n",
       "            acceleration voltage in volt\n",
-      "        Output:\n",
+      "        Returns:\n",
       "        -------\n",
-      "            wave length in nm\n",
+      "        wavelength: float\n",
+      "            wave length in Angstrom\n",
       "    \n",
       "    kinematic_scattering(atoms, verbose=False)\n",
       "        All kinematic scattering calculation\n",
@@ -486,10 +482,9 @@
       "        \n",
       "        Parameters\n",
       "        ----------\n",
-      "        tags: dict\n",
-      "            dictionary with crystal structure:\n",
-      "            'unit_cell', 'base' 'elements'\n",
-      "            and with experimental parameters:\n",
+      "        atoms: ase.Atoms\n",
+      "            object with crystal structure:\n",
+      "            and with experimental parameters in info attribute:\n",
       "            'acceleration_voltage_V', 'zone_hkl', 'Sg_max', 'hkl_max'\n",
       "            Optional parameters are:\n",
       "            'mistilt', convergence_angle_mrad', and 'crystal_name'\n",
@@ -499,8 +494,8 @@
       "        \n",
       "        Returns\n",
       "        -------\n",
-      "        dict:\n",
-      "            There are three sub_dictionaries:\n",
+      "        ato,s:\n",
+      "            There are three sub_dictionaries in info attribute:\n",
       "            ['allowed'], ['forbidden'], and ['HOLZ']\n",
       "            ['allowed'] and ['forbidden'] dictionaries contain:\n",
       "                ['Sg'], ['hkl'], ['g'], ['structure factor'], ['intensities'],\n",
@@ -574,6 +569,11 @@
       "            new tilted zone axis\n",
       "\n",
       "DATA\n",
+      "    a_l = 0.3336\n",
+      "    base_l = [(0.6666666666666666, 0.3333333333333333, 0.5), (0.3333333333...\n",
+      "    c_l = 0.4754\n",
+      "    cdb = {'ag': {'a': 4.0853, 'crystal_name': 'silver', 'elements': 'Ag',...\n",
+      "    crystal_data_base = {'ag': {'a': 4.0853, 'crystal_name': 'silver', 'el...\n",
       "    electronFF = {'Ac': {'Z': 89, 'bond_length': [2.09, 1.88, 1.7, 0], 'ch...\n",
       "    inputKeys = ['acceleration_voltage_V', 'zone_hkl', 'Sg_max', 'hkl_max'...\n",
       "    jmol_colors = array([[1.   , 0.   , 0.   ],\n",
@@ -581,7 +581,7 @@
       "    optional_inputKeys = ['crystal', 'lattice_parameter_nm', 'convergence_...\n",
       "\n",
       "FILE\n",
-      "    c:\\users\\gduscher\\anaconda3\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
+      "    /home/nyd/.local/lib/python3.8/site-packages/pyTEMlib/kinematic_scattering.py\n",
       "\n",
       "\n"
      ]
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
