--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "### R.F. Egerton\n",
     "\n",
-    "**Electron Energy{Loss Spectroscopy in the Electron Microscope**\n",
+    "**Electron Energy-Loss Spectroscopy in the Electron Microscope**\n",
     "\n",
     "Plenum Press, 2011 (3rd Edition)<br>\n",
     "\n",
