--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -2345,6 +2345,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pretty Plots\n",
+    "We can use Jmol package to plot the structure in a shiny mode in this [notebook](CH2_03b-JSmol_Viewer.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reciprocal Lattice \n",
     "The unit cell in reciprocal space"
    ]
