--- a/Diffraction/CH2_03b-JSmol_Viewer.ipynb
+++ b/Diffraction/CH2_03b-JSmol_Viewer.ipynb
@@ -43,18 +43,70 @@
    "metadata": {},
    "source": [
     "## Import numerical and plotting python packages\n",
-    "### Check Installed Packages"
+    "### Check Installed Packages\n",
+    "\n",
+    "We are using pyTEMlib as ususal but also **JSmol** for visualizations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing jupyter-jsmol\n",
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: C:\\Users\\gduscher\\Anaconda3\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - jupyter-jsmol\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    jupyter-jsmol-2022.1.0     |     pyhd8ed1ab_0         5.1 MB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:         5.1 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  jupyter-jsmol      conda-forge/noarch::jupyter-jsmol-2022.1.0-pyhd8ed1ab_0\n",
+      "\n",
+      "The following packages will be SUPERSEDED by a higher-priority channel:\n",
+      "\n",
+      "  conda              pkgs/main::conda-4.11.0-py39haa95532_0 --> conda-forge::conda-4.11.0-py39hcbf5309_0\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "\n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    |            |   0% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    |            |   0% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | 5          |   5% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | #          |  11% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | #8         |  19% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ##7        |  27% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ###4       |  35% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ####1      |  42% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ####9      |  49% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ######     |  60% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ######8    |  69% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | #######9   |  80% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | #########  |  91% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | #########9 | 100% \n",
+      "jupyter-jsmol-2022.1 | 5.1 MB    | ########## | 100% \n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n",
       "done\n"
      ]
     }
@@ -94,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -105,6 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Symmetry functions of spglib enabled\n",
       "pyTEMlib version:  0.2022.1.1\n"
      ]
     }
@@ -120,7 +173,6 @@
     "\n",
     "import pyTEMlib\n",
     "import pyTEMlib.crystal_tools \n",
-    "\n",
     "print('pyTEMlib version: ', pyTEMlib.__version__)"
    ]
   },
@@ -173,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61658e89d55148dfb4004e48490bf77d",
+       "model_id": "432137b125fc47e59027260d548a2d3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +248,7 @@
     "size = 3\n",
     "# --------------\n",
     "\n",
-    "view = pyTEMlib.crystal_tools.jmol_viewer(atoms, size=size)"
+    "view = pyTEMlib.crystal_tools.jmol_viewer(atoms, size=size)\n"
    ]
   },
   {
@@ -227,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +300,39 @@
    "outputs": [],
    "source": [
     "view.script('write IMAGE 1000 1000 JPG 100 \"image.jpg\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Graphite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9f255b2f6814eab9828b47fa19cd083",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "JsmolView(layout=Layout(align_self='stretch', height='400px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atoms = pyTEMlib.crystal_tools.structure_by_name('graphite')\n",
+    "atoms.positions\n",
+    "view2 = pyTEMlib.crystal_tools.jmol_viewer(atoms, size=size)\n"
    ]
   },
   {
