--- a/Diffraction/CH2_06-Kinematic_Scattering_Geometry.ipynb
+++ b/Diffraction/CH2_06-Kinematic_Scattering_Geometry.ipynb
@@ -8784,6 +8784,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Origin of Excitation Error\n",
+    "Part of the reason why we have an excitation error lays in the sample dimensions required for TEM investigations.\n",
+    "\n",
+    "This influence of the sample geometry is further explored in these notebooks:\n",
+    "- [Relrod](CH6a-Relrod.ipynb)\n",
+    "- [Fourier Transform Laboratroy](CH2_03c-FourierTransformLaboratory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Center of Ewald Shere\n",
     "So far we have considered the incident wave vector to be parallel to the Z-axis. \n",
     "However, we need to know the center of the Ewald sphere for any zone axis.\n"
