--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -134,18 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "# import matplotlib and numpy with this **magic** command\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
-    "%pylab --no-import-all notebook\n",
+    "%pylab notebook\n",
     "%gui qt\n"
    ]
   },
@@ -163,14 +171,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "blas_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "numpy version:  1.20.3\n",
+      "scipy version:  1.7.1\n"
+     ]
+    }
+   ],
    "source": [
     "## What is numpy compiled against\n",
     "np.__config__.show()\n",
@@ -193,14 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": true
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pkg_resources import get_distribution, DistributionNotFound\n",
@@ -214,7 +259,7 @@
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2022.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2022.1.1':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -234,13 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyTEM version: 0.2022.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import pyTEMlib\n",
     "print(f'pyTEM version: {pyTEMlib.__version__}')"
@@ -256,24 +309,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyTEMlib.crystal_tools' has no attribute 'structure_by_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16956/3545224575.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# make a structure dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtags\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpyTEMlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcrystal_tools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstructure_by_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Graphite'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# define bond length for plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pyTEMlib.crystal_tools' has no attribute 'structure_by_name'"
+     ]
+    }
+   ],
    "source": [
-    "import pyTEMlib.kinematic_scattering as ks # Import kinematic scattering library from pyTEMlib\n",
+    "import pyTEMlib.kineamtic_scattering as ks # Import kinematic scattering library from pyTEMlib\n",
     "\n",
     "# make a structure dictionary\n",
-    "tags = ks.structure_by_name('Graphite')\n",
+    "atoms = ks.structure_by_name('Graphite')\n",
     "\n",
-    "# define bond length for plot\n",
-    "tags['max_bond_length'] = 0.246\n",
-    "\n",
-    "# plot it in 3D\n",
-    "ks.plot_unitcell(tags)"
+    "atoms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ase.visualize import view\n",
+    "view(atoms*(4,4,1))"
    ]
   },
   {
@@ -500,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "3",
